--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
 			<ul class="contact-list list">
 				<li class="contact">
 					<a class="contact-link" href="mailto:info@devstudio.com">
-						<svg class="contact-mail">
+						<svg width="16" height="12" class="contact-mail">
 							<use href="./image/icons.svg#icon-email"></use>
 						</svg>
 						info@devstudio.com
@@ -40,7 +40,7 @@
 
 				<li class="contact">
 					<a class="contact-link" href="tel:+380961111111">
-						<svg class="contact-tel">
+						<svg width="10" height="16" class="contact-tel">
 							<use href="./image/icons.svg#icon-smartphone"></use>
 						</svg>
 						+38 096 111 11 11</a>
@@ -81,7 +81,7 @@
 
 				<ul class="portfolio-projects list">
 					<li class="portfolio-link">
-						<a href="">
+						<a class="box-link" href="">
 							<img src="./image/portfolio/img1.jpg" alt="сайт">
 							<div class="box-content">
 								<h3 class="portfolio-title">
@@ -90,122 +90,122 @@
 								<p class="portfolio-text">
 									Веб-сайт
 								</p>
+							</div>
 						</a>
-			</div>
-			</li>
+					</li>
 
-			<li class="portfolio-link">
-				<a href="">
-					<img src="./image/portfolio/img2.jpg" alt="сайт">
-					<div class="box-content">
-						<h3 class="portfolio-title">
-							Постер New Orlean vs Golden Star
-						</h3>
-						<p class="portfolio-text">
-							Дизайн
-						</p>
-					</div>
-				</a>
+					<li class="portfolio-link">
+						<a class="box-link" href="">
+							<img src="./image/portfolio/img2.jpg" alt="сайт">
+							<div class="box-content">
+								<h3 class="portfolio-title">
+									Постер New Orlean vs Golden Star
+								</h3>
+								<p class="portfolio-text">
+									Дизайн
+								</p>
+							</div>
+						</a>
 
-			</li>
-			<li class="portfolio-link">
-				<a href="">
-					<img src="./image/portfolio/img3.jpg" alt="сайт">
-					<div class="box-content">
-						<h3 class="portfolio-title">
-							Ресторан Seafood
-						</h3>
-						<p class="portfolio-text">
-							Додаток
-						</p>
-					</div>
-				</a>
+					</li>
+					<li class="portfolio-link">
+						<a class="box-link" href="">
+							<img src="./image/portfolio/img3.jpg" alt="сайт">
+							<div class="box-content">
+								<h3 class="portfolio-title">
+									Ресторан Seafood
+								</h3>
+								<p class="portfolio-text">
+									Додаток
+								</p>
+							</div>
+						</a>
 
-			</li>
-			<li class="portfolio-link">
-				<a href="">
-					<img src="./image/portfolio/img4.jpg" alt="сайт">
-					<div class="box-content">
-						<h3 class="portfolio-title">
-							Проєкт Prime
-						</h3>
-						<p class="portfolio-text">
-							Маркетинг
-						</p>
-					</div>
-				</a>
-			</li>
+					</li>
+					<li class="portfolio-link">
+						<a class="box-link" href="">
+							<img src="./image/portfolio/img4.jpg" alt="сайт">
+							<div class="box-content">
+								<h3 class="portfolio-title">
+									Проєкт Prime
+								</h3>
+								<p class="portfolio-text">
+									Маркетинг
+								</p>
+							</div>
+						</a>
+					</li>
 
-			<li class="portfolio-link">
-				<a href="">
-					<img src="./image/portfolio/img5.jpg" alt="сайт">
-					<div class="box-content">
-						<h3 class="portfolio-title">
-							Проєкт Boxes
-						</h3>
-						<p class="portfolio-text">
-							Додаток
-						</p>
-					</div>
-				</a>
-			</li>
+					<li class="portfolio-link">
+						<a class="box-link" href="">
+							<img src="./image/portfolio/img5.jpg" alt="сайт">
+							<div class="box-content">
+								<h3 class="portfolio-title">
+									Проєкт Boxes
+								</h3>
+								<p class="portfolio-text">
+									Додаток
+								</p>
+							</div>
+						</a>
+					</li>
 
-			<li class="portfolio-link">
-				<a href="">
-					<img src="./image/portfolio/img6.jpg" alt="сайт">
-					<div class="box-content">
-						<h3 class="portfolio-title">
-							Inspiration has no Borders
-						</h3>
-						<p class="portfolio-text">
-							Веб-сайт
-						</p>
-					</div>
-				</a>
-			</li>
+					<li class="portfolio-link">
+						<a class="box-link" href="">
+							<img src="./image/portfolio/img6.jpg" alt="сайт">
+							<div class="box-content">
+								<h3 class="portfolio-title">
+									Inspiration has no Borders
+								</h3>
+								<p class="portfolio-text">
+									Веб-сайт
+								</p>
+							</div>
+						</a>
+					</li>
 
-			<li class="portfolio-link">
-				<a href="">
-					<img src="./image/portfolio/img7.jpg" alt="сайт">
-					<div class="box-content">
-						<h3 class="portfolio-title">
-							Видання Limited Edition
-						</h3>
-						<p class="portfolio-text">
-							Дизайн
-						</p>
-					</div>
-				</a>
-			</li>
+					<li class="portfolio-link">
+						<a class="box-link" href="">
+							<img src="./image/portfolio/img7.jpg" alt="сайт">
+							<div class="box-content">
+								<h3 class="portfolio-title">
+									Видання Limited Edition
+								</h3>
+								<p class="portfolio-text">
+									Дизайн
+								</p>
+							</div>
+						</a>
+					</li>
 
-			<li class="portfolio-link">
-				<a href="">
-					<img src="./image/portfolio/img8.jpg" alt="сайт">
-					<div class="box-content">
-						<h3 class="portfolio-title">
-							Проєкт LAB
-						</h3>
-						<p class="portfolio-text">
-							Маркетинг
-						</p>
-					</div>
-				</a>
-			</li>
+					<li class="portfolio-link">
+						<a class="box-link" href="">
+							<img src="./image/portfolio/img8.jpg" alt="сайт">
+							<div class="box-content">
+								<h3 class="portfolio-title">
+									Проєкт LAB
+								</h3>
+								<p class="portfolio-text">
+									Маркетинг
+								</p>
+							</div>
+						</a>
+					</li>
 
-			<li class="portfolio-link">
-				<a href="">
-					<img src="./image/portfolio/img9.jpg" alt="сайт">
-					<div class="box-content">
-						<h3 class="portfolio-title">
-							Growing Business
-						</h3>
-						<p class="portfolio-text">
-							Додаток
-						</p>
-					</div>
-				</a>
-			</li>
-			</ul>
+					<li class="portfolio-link">
+						<a class="box-link" href="">
+							<img src="./image/portfolio/img9.jpg" alt="сайт">
+							<div class="box-content">
+								<h3 class="portfolio-title">
+									Growing Business
+								</h3>
+								<p class="portfolio-text">
+									Додаток
+								</p>
+							</div>
+						</a>
+					</li>
+				</ul>
 		</section>
 	</main>
 
@@ -231,7 +231,7 @@
 				<ul class="footer-link list">
 					<li class="list-box">
 						<a class="media-link footer-icon" href="">
-							<svg class="icon-instagram size-media">
+							<svg width="20" height="20" class="icon-instagram size-media">
 								<use href="./image/icons.svg#icon-instagram"></use>
 							</svg>
 						</a>
@@ -239,7 +239,7 @@
 
 					<li class="list-box">
 						<a class="media-link footer-icon" href="">
-							<svg class="icon-twitter size-media">
+							<svg width="20" height="20" class="icon-twitter size-media">
 								<use href="./image/icons.svg#icon-twitter"></use>
 							</svg>
 						</a>
@@ -247,7 +247,7 @@
 
 					<li class="list-box">
 						<a class="media-link footer-icon " href="">
-							<svg class="icon-facebook size-media">
+							<svg width="20" height="20" class="icon-facebook size-media">
 								<use href="./image/icons.svg#icon-facebook"></use>
 							</svg>
 						</a>
@@ -255,7 +255,7 @@
 
 					<li class="list-box">
 						<a class="media-link footer-icon" href="">
-							<svg class="icon-linkedin size-media">
+							<svg width="20" height="20" class="icon-linkedin size-media">
 								<use href="./image/icons.svg#icon-linkedin"></use>
 							</svg>
 						</a>
