--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<ul class="contact-list list">
 				<li class="contact">
 					<a class="contact-link" href="mailto:info@devstudio.com">
-						<svg class="contact-mail">
+						<svg width="16" height="12" class="contact-mail">
 							<use href="./image/icons.svg#icon-email"></use>
 						</svg>
 						info@devstudio.com
@@ -40,7 +40,7 @@
 
 				<li class="contact">
 					<a class="contact-link" href="tel:+380961111111">
-						<svg class="contact-tel">
+						<svg width="10" height="16" class="contact-tel">
 							<use href="./image/icons.svg#icon-smartphone"></use>
 						</svg>
 						+38 096 111 11 11</a>
@@ -65,7 +65,7 @@
 				<ul class="projects-list list">
 					<li class="projects-link">
 						<div class="icon-list">
-							<svg class="icon-antenna size">
+							<svg width="70" height="70" class="icon-antenna">
 								<use href="./image/icons.svg#icon-antenna"></use>
 							</svg>
 						</div>
@@ -77,7 +77,7 @@
 
 					<li class="projects-link">
 						<div class="icon-list">
-							<svg class="icon-clock size">
+							<svg width="70" height="70" class="icon-clock size">
 								<use href="./image/icons.svg#icon-clock"></use>
 							</svg>
 						</div>
@@ -87,7 +87,7 @@
 
 					<li class="projects-link icon-diagram">
 						<div class="icon-list">
-							<svg class="icon-diagram size">
+							<svg width="70" height="70" class="icon-diagram size">
 								<use href="./image/icons.svg#icon-diagram"></use>
 							</svg>
 						</div>
@@ -97,7 +97,7 @@
 
 					<li class="projects-link icon-astronaut">
 						<div class="icon-list">
-							<svg class="icon-astronaut size">
+							<svg width="70" height="70" class="icon-astronaut size">
 								<use href="./image/icons.svg#icon-astronaut"></use>
 							</svg>
 						</div>
@@ -139,112 +139,144 @@
 						<img src="./image/igor.jpg" alt="Product Designer" width="270">
 						<h3 class="team-title">Ігор Дем'яненко</h3>
 						<p class="team-text">Product Designer</p>
-						<div class="team-media">
-							<a class="media-link" href="">
-								<svg class="icon-instagram size-media">
-									<use href="./image/icons.svg#icon-instagram"></use>
-								</svg>
-							</a>
-							<a class="media-link" href="">
-								<svg class="icon-twitter size-media">
-									<use href="./image/icons.svg#icon-twitter"></use>
-								</svg>
-							</a>
-							<a class="media-link" href="">
-								<svg class="icon-facebook size-media">
-									<use href="./image/icons.svg#icon-facebook"></use>
-								</svg>
-							</a>
-							<a class="media-link" href="">
-								<svg class="icon-linkedin size-media">
-									<use href="./image/icons.svg#icon-linkedin"></use>
-								</svg>
-							</a>
-						</div>
+						<ul class="team-media list">
+							<li class="media list">
+								<a class="media-link" href="">
+									<svg width="20" height="20" class="icon-instagram size-media ">
+										<use href="./image/icons.svg#icon-instagram"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="media-list">
+								<a class="media-link" href="">
+									<svg width="20" height="20" class="icon-twitter size-media">
+										<use href="./image/icons.svg#icon-twitter"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="media-list">
+								<a class="media-link" href="">
+									<svg width="20" height="20" class="icon-facebook size-media">
+										<use href="./image/icons.svg#icon-facebook"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="media-list">
+								<a class="media-link" href="">
+									<svg width="20" height="20" class="icon-linkedin size-media">
+										<use href="./image/icons.svg#icon-linkedin"></use>
+									</svg>
+								</a>
+							</li>
+						</ul>
 					</li>
 
 					<li class="team-link">
 						<img src="./image/olga.jpg" alt="Frontend Developer" width="270">
 						<h3 class="team-title">Ольга Рєпіна</h3>
 						<p class="team-text">Frontend Developer</p>
-						<div class="team-media">
-							<a class="media-link" href="">
-								<svg class="icon-instagram size-media">
-									<use href="./image/icons.svg#icon-instagram"></use>
-								</svg>
-							</a>
-							<a class="media-link" href="">
-								<svg class="icon-twitter size-media">
-									<use href="./image/icons.svg#icon-twitter"></use>
-								</svg>
-							</a>
-							<a class="media-link" href="">
-								<svg class="icon-facebook size-media">
-									<use href="./image/icons.svg#icon-facebook"></use>
-								</svg>
-							</a>
-							<a class="media-link" href="">
-								<svg class="icon-linkedin size-media">
-									<use href="./image/icons.svg#icon-linkedin"></use>
-								</svg>
-							</a>
-						</div>
+						<ul class="team-media list">
+							<li class="media list">
+								<a class="media-link" href="">
+									<svg width="20" height="20" class="icon-instagram size-media">
+										<use href="./image/icons.svg#icon-instagram"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="media-list">
+								<a class="media-link" href="">
+									<svg width="20" height="20" class="icon-twitter size-media">
+										<use href="./image/icons.svg#icon-twitter"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="media-list">
+								<a class="media-link" href="">
+									<svg width="20" height="20" class="icon-facebook size-media">
+										<use href="./image/icons.svg#icon-facebook"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="media-list">
+								<a class="media-link" href="">
+									<svg width="20" height="20" class="icon-linkedin size-media">
+										<use href="./image/icons.svg#icon-linkedin"></use>
+									</svg>
+								</a>
+							</li>
+						</ul>
 					</li>
 
 					<li class="team-link">
 						<img src="./image/mukola.jpg" alt="Marketing" width="270">
 						<h3 class="team-title">Микола Тарасов</h3>
 						<p class="team-text">Marketing</p>
-						<div class="team-media">
-							<a class="media-link" href="">
-								<svg class="icon-instagram size-media">
-									<use href="./image/icons.svg#icon-instagram"></use>
-								</svg>
-							</a>
-							<a class="media-link" href="">
-								<svg class="icon-twitter size-media">
-									<use href="./image/icons.svg#icon-twitter"></use>
-								</svg>
-							</a>
-							<a class="media-link" href="">
-								<svg class="icon-facebook size-media">
-									<use href="./image/icons.svg#icon-facebook"></use>
-								</svg>
-							</a>
-							<a class="media-link" href="">
-								<svg class="icon-linkedin size-media">
-									<use href="./image/icons.svg#icon-linkedin"></use>
-								</svg>
-							</a>
-						</div>
+						<ul class="team-media list">
+							<li class="media list">
+								<a class="media-link" href="">
+									<svg width="20" height="20" class="icon-instagram size-media">
+										<use href="./image/icons.svg#icon-instagram"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="media-list">
+								<a class="media-link" href="">
+									<svg width="20" height="20" class="icon-twitter size-media">
+										<use href="./image/icons.svg#icon-twitter"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="media-list">
+								<a class="media-link" href="">
+									<svg width="20" height="20" class="icon-facebook size-media">
+										<use href="./image/icons.svg#icon-facebook"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="media-list">
+								<a class="media-link" href="">
+									<svg width="20" height="20" class="icon-linkedin size-media">
+										<use href="./image/icons.svg#icon-linkedin"></use>
+									</svg>
+								</a>
+							</li>
+						</ul>
 					</li>
 
 					<li class="team-link">
 						<img src="./image/mushailo.jpg" alt="UI Designer" width="270">
 						<h3 class="team-title">Михайло Єрмаков</h3>
 						<p class="team-text">UI Designer</p>
-						<div class="team-media">
-							<a class="media-link" href="">
-								<svg class="icon-instagram size-media">
-									<use href="./image/icons.svg#icon-instagram"></use>
-								</svg>
-							</a>
-							<a class="media-link" href="">
-								<svg class="icon-twitter size-media">
-									<use href="./image/icons.svg#icon-twitter"></use>
-								</svg>
-							</a>
-							<a class="media-link" href="">
-								<svg class="icon-facebook size-media">
-									<use href="./image/icons.svg#icon-facebook"></use>
-								</svg>
-							</a>
-							<a class="media-link" href="">
-								<svg class="icon-linkedin size-media">
-									<use href="./image/icons.svg#icon-linkedin"></use>
-								</svg>
-							</a>
-						</div>
+						<ul class="team-media list">
+							<li class="media list">
+								<a class="media-link" href="">
+									<svg width="20" height="20" class="icon-instagram size-media">
+										<use href="./image/icons.svg#icon-instagram"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="media-list">
+								<a class="media-link" href="">
+									<svg width="20" height="20" class="icon-twitter size-media">
+										<use href="./image/icons.svg#icon-twitter"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="media-list">
+								<a class="media-link" href="">
+									<svg width="20" height="20" class="icon-facebook size-media">
+										<use href="./image/icons.svg#icon-facebook"></use>
+									</svg>
+								</a> width="20" height="20"
+							</li>
+							<li class="media-list">
+								<a class="media-link" href="">
+									<svg width="20" height="20" class="icon-linkedin size-media">
+										<use href="./image/icons.svg#icon-linkedin"></use>
+									</svg>
+								</a>
+							</li>
+						</ul>
 					</li>
 				</ul>
 			</div>
@@ -258,7 +290,7 @@
 				<ul class="wrap-list list">
 					<li class="wrap-box">
 						<a class="wrap-link" href="">
-							<svg class="icon-client1 icon-client">
+							<svg width="106" height="60" class="icon-client1 icon-client">
 								<use href="./image/icons.svg#icon-client1"></use>
 							</svg>
 						</a>
@@ -266,7 +298,7 @@
 
 					<li class="wrap-box">
 						<a class="wrap-link" href="">
-							<svg class="icon-client2 icon-client">
+							<svg width="106" height="60" class="icon-client2 icon-client">
 								<use href="./image/icons.svg#icon-client2"></use>
 							</svg>
 						</a>
@@ -274,14 +306,14 @@
 
 					<li class="wrap-box">
 						<a class="wrap-link" href="">
-							<svg class="icon-client3 icon-client">
+							<svg width="106" height="60" class="icon-client3 icon-client">
 								<use href="./image/icons.svg#icon-client3"></use>
 							</svg>
 						</a>
 					</li>
 					<li class="wrap-box">
 						<a class="wrap-link" href="">
-							<svg class="icon-client4 icon-client">
+							<svg width="106" height="60" class="icon-client4 icon-client">
 								<use href="./image/icons.svg#icon-client4"></use>
 							</svg>
 						</a>
@@ -289,7 +321,7 @@
 
 					<li class="wrap-box">
 						<a class="wrap-link" href="">
-							<svg class="icon-client5 icon-client">
+							<svg width="106" height="60" class="icon-client5 icon-client">
 								<use href="./image/icons.svg#icon-client5"></use>
 							</svg>
 						</a>
@@ -297,7 +329,7 @@
 
 					<li class="wrap-box">
 						<a class="wrap-link" href="">
-							<svg class="icon-client6 icon-client">
+							<svg width="106" height="60" class="icon-client6 icon-client">
 								<use href="./image/icons.svg#icon-client6"></use>
 							</svg>
 						</a>
@@ -306,6 +338,7 @@
 			</div>
 		</section>
 	</main>
+
 	<footer>
 		<div class="container footer-box">
 			<div class="info-address">
@@ -328,7 +361,7 @@
 				<ul class="footer-link list">
 					<li class="list-box">
 						<a class="media-link footer-icon" href="">
-							<svg class="icon-instagram size-media">
+							<svg width="20" height="20" class="icon-instagram size-media">
 								<use href="./image/icons.svg#icon-instagram"></use>
 							</svg>
 						</a>
@@ -336,7 +369,7 @@
 
 					<li class="list-box">
 						<a class="media-link footer-icon" href="">
-							<svg class="icon-twitter size-media">
+							<svg width="20" height="20" class="icon-twitter size-media">
 								<use href="./image/icons.svg#icon-twitter"></use>
 							</svg>
 						</a>
@@ -344,7 +377,7 @@
 
 					<li class="list-box">
 						<a class="media-link footer-icon " href="">
-							<svg class="icon-facebook size-media">
+							<svg width="20" height="20" class="icon-facebook size-media">
 								<use href="./image/icons.svg#icon-facebook"></use>
 							</svg>
 						</a>
@@ -352,7 +385,7 @@
 
 					<li class="list-box">
 						<a class="media-link footer-icon" href="">
-							<svg class="icon-linkedin size-media">
+							<svg width="20" height="20" class="icon-linkedin size-media">
 								<use href="./image/icons.svg#icon-linkedin"></use>
 							</svg>
 						</a>
