--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 						<h3 class="team-title">Михайло Єрмаков</h3>
 						<p class="team-text">UI Designer</p>
 						<ul class="team-media list">
-							<li class="media list">
+							<li class="media-list">
 								<a class="media-link" href="">
 									<svg width="20" height="20" class="icon-instagram size-media">
 										<use href="./image/icons.svg#icon-instagram"></use>
@@ -267,7 +267,7 @@
 									<svg width="20" height="20" class="icon-facebook size-media">
 										<use href="./image/icons.svg#icon-facebook"></use>
 									</svg>
-								</a> width="20" height="20"
+								</a>
 							</li>
 							<li class="media-list">
 								<a class="media-link" href="">
