--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 						<h3 class="team-title">Микола Тарасов</h3>
 						<p class="team-text">Marketing</p>
 						<ul class="team-media list">
-							<li class="media list">
+							<li class="media-list">
 								<a class="media-link" href="">
 									<svg width="20" height="20" class="icon-instagram size-media">
 										<use href="./image/icons.svg#icon-instagram"></use>
