--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 						<p class="team-text">Marketing</p>
 						<ul class="team-media list">
 							<li class="media-list">
-								<a class="media-link" href="">
+								<a class="media-link" href="#">
 									<svg width="20" height="20" class="icon-instagram size-media">
 										<use href="./image/icons.svg#icon-instagram"></use>
 									</svg>
@@ -227,14 +227,14 @@
 								</a>
 							</li>
 							<li class="media-list">
-								<a class="media-link" href="">
+								<a class="media-link" href="#">
 									<svg width="20" height="20" class="icon-facebook size-media">
 										<use href="./image/icons.svg#icon-facebook"></use>
 									</svg>
 								</a>
 							</li>
 							<li class="media-list">
-								<a class="media-link" href="">
+								<a class="media-link" href="#">
 									<svg width="20" height="20" class="icon-linkedin size-media">
 										<use href="./image/icons.svg#icon-linkedin"></use>
 									</svg>
